# suptertask

./: .travis.yml  CMakeLists.txt  CPackConfig.cmake  Dockerfile  README.md
_build/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Makefile  check  cmake_install.cmake  demo  install_manifest.txt
_build/Testing/Temporary/: CTestCostData.txt
_build/_3rdParty/Hunter/: install-root-dir
_build/_3rdParty/Hunter/config-id/: config.cmake
_build/_3rdParty/Hunter/toolchain/_builds/: CMakeCache.txt  Makefile  cmake_install.cmake
examples/: demo.cpp
include/: sumh.h
sources/: sum.cpp
tests/: test.cpp
